{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Jogador",
            "id": "aa16e6a2-50ed-4433-9450-065f65a5a3f8",
            "actions": [
                {
                    "name": "Anda",
                    "type": "Button",
                    "id": "8fbaf7b9-864f-4e8f-8a2a-aa9c479a68b6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Corre",
                    "type": "Button",
                    "id": "90d5d1b8-a692-402b-88b3-551b7de2189d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "TapAndHold",
                    "initialStateCheck": false
                },
                {
                    "name": "Pula",
                    "type": "Button",
                    "id": "a8c05fb2-a19c-4b35-9820-bfc421388015",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Abaixa",
                    "type": "Button",
                    "id": "9316a897-fdfa-4e0a-af58-82f325cb95e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dropa",
                    "type": "Button",
                    "id": "59aa0a75-f5f9-4928-8f74-64ce7ba97c16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ataca",
                    "type": "Button",
                    "id": "9e449ffd-4976-486c-a062-a8dd1e840910",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Esquerda / Direita",
                    "id": "1df1e3b8-088c-40e6-aa7d-188c2282aa80",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Anda",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "c26c90f2-1dd9-4bfa-a5fc-68e26c3aa276",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Anda",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "d0637d68-b5b6-4141-9c19-198e3bae2998",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Anda",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "c0e24569-51f8-4837-95e2-fe7e3d776bf0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Anda",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "7cd9d663-1ea8-4150-aa81-ae17848afbc4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Anda",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9371eb1e-3c4a-4c3c-983b-f19eb6d77173",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pula",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "151f9ac6-8400-4e5a-8f40-074947a4ca2b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pula",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "039b14c5-ecd8-4dc7-a119-579a166fde4c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Abaixa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17e7b4da-68c2-483e-9e89-684328949285",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Abaixa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8b3647f-576f-49ae-a779-bcb81177b188",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dropa",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e9576eb-e8e8-46c4-9e82-5234d6f31dc8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ataca",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9e750d1-5912-4ef4-b3c2-89998eb0d2d4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ataca",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Esquerda / Direita",
                    "id": "e8c45d2e-5d2c-41c6-aa3e-96cb7683f0b4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Corre",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fb1197ae-9f2d-4c0d-bb72-56d274e99d0b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Corre",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "3bc1c0e8-c9a4-427c-a0ed-e32e6dac8296",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Corre",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ddf87f2d-9bbf-4118-a02b-63fa3b92e89d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Corre",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff477ddd-702a-421e-9ac1-b5f852e9c0dc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Corre",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}